--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 velib_project_accessKeys.csv
 velib_project_credentials.csv
 secret.sh
+api-key-2DF2XAXONFSMUHQ5.txt
+lime.ipynb
+realtime-api-key-UUGNN2XUASUTOBTW.txt
