--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ secret.sh
 api-key-2DF2XAXONFSMUHQ5.txt
 lime.ipynb
 realtime-api-key-UUGNN2XUASUTOBTW.txt
+df_mapping.ipynb
+correlation_heatmap.png
